# ROS2-Service-Client

./: README.md
.github/classroom/: autograding.json
.github/scripts/: grade.sh
.github/workflows/: classroom.yml
entri_ros2_srvcli_cpp/: CMakeLists.txt  package.xml
entri_ros2_srvcli_cpp/src/: client_node.cpp  service_node.cpp
entri_ros2_srvcli_cpp/srv/: RobotTask.srv
